got start button to disappear and choice boxes to appear when i click start button

--- a/index.html
+++ b/index.html
@@ -22,19 +22,20 @@
         <div id="questions">
             <h2 id="questionTitle"></h2>
             <ol id="choices" class="choices">
-              <li id="choiceBtn" class="btn"></li>
-              <li id="choiceBtn" class="btn"></li>
-              <li id="choiceBtn" class="btn"></li>
-              <li id="choiceBtn" class="btn"></li>
+              <li id="choiceBtnA" class="btn"></li>
+              <li id="choiceBtnB" class="btn"></li>
+              <li id="choiceBtnC" class="btn"></li>
+              <li id="choiceBtnD" class="btn"></li>
             </ol>
         </div>
 
         <div id="end">
             <h2>All done!</h2>
-            <p>Your final score is <span id=final-score></span>.</p>
+            <p>Your final score is <span id="final-score"></span>.</p>
         </div>       
         <script src="./script.js"></script>
         <script src="./Assets/questions.js"></script>
+       
   </div>
   </body>
 </html>
