First question appears, alert pops up in the window, but will not go to next question

--- a/index.html
+++ b/index.html
@@ -21,19 +21,21 @@
 
         <div id="questions">
             <h2 id="questionTitle"></h2>
-            <ol id="choices" class="choices">
+            <div id="choices" class="choices"></div>
+            <!-- <ol id="choices" class="choices">
               <li id="choiceBtnA" class="btn"></li>
               <li id="choiceBtnB" class="btn"></li>
               <li id="choiceBtnC" class="btn"></li>
               <li id="choiceBtnD" class="btn"></li>
-            </ol>
+            </ol> -->
         </div>
 
         <div id="end">
             <h2>All done!</h2>
             <p>Your final score is <span id="final-score"></span>.</p>
         </div>       
-        <script src="./script.js"></script>
+        <script src="./Assets/questions.js"></script> </script>
+        <script src="./Assets/script.js"></script>
        
   </div>
   </body>
