questions appearing one after another, questions registering as right or wrong, time being deducted from the clock for wrong answers

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./Assets/stylesheet.css" />
   </head>
   <body>
-    <div class="scores"><a href="highscores.htlm">View Highscores</a></div>
+    <div class="scores"><a href="highscores.html">View Highscores</a></div>
 
     <div class="time">Time: <span id="time">0</span></div>
   <div class="wrapper">
@@ -21,20 +21,18 @@
 
         <div id="questions">
             <h2 id="questionTitle"></h2>
-            <div id="choices" class="choices"></div>
-            <!-- <ol id="choices" class="choices">
+            <ol id="choices" class="choices">
               <li id="choiceBtnA" class="btn"></li>
               <li id="choiceBtnB" class="btn"></li>
               <li id="choiceBtnC" class="btn"></li>
               <li id="choiceBtnD" class="btn"></li>
-            </ol> -->
+            </ol>
         </div>
 
         <div id="end">
             <h2>All done!</h2>
             <p>Your final score is <span id="final-score"></span>.</p>
         </div>       
-        <script src="./Assets/questions.js"></script> </script>
         <script src="./Assets/script.js"></script>
        
   </div>
