final score is displayed after the quiz is over

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 
         <div id="end">
             <h2>All done!</h2>
-            <p>Your final score is <span id="final-score"></span>.</p>
+            <p id="finalScore"></p>
+            <p></p>
         </div>       
         <script src="./Assets/script.js"></script>
        
