buttons have color to them

--- a/Assets/highscores.html
+++ b/Assets/highscores.html
@@ -16,7 +16,7 @@
         <button>Back</button>
     </form>
 
-<script> src= </script>
+<script> src="./Assets.script.js" </script>
     
 </body>
 </html>
