--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
         <div id="end">
             <h2>All done!</h2>
             <p id="finalScore"></p>
-            <p></p>
+            <p>Please enter your initials below</p>
+            <input id = "initials" type ="textarea" placeholder = "Enter initials here">
+            <button class="btn" id="initialsBtn" type="submit">Submit</button>
         </div>       
         <script src="./Assets/script.js"></script>
        
